<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accelerometer" formatted="false">Accelerometer X:%d Y:%d Z:%d</string>
    <string name="action_connect">Connect</string>
    <string name="action_connected">设备已连接</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">CL831</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="battery">Battery:%d%%</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="device_name">Device name:%s</string>
    <string name="dfu_aborted">升级已取消</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_action_upload">升级</string>
    <string name="dfu_action_upload_cancel">取消</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_confirmation_dialog_title">应用升级中</string>
    <string name="dfu_default_name">未知</string>
    <string name="dfu_feature_title">F-OTA</string>
    <string name="dfu_file_name_label">文件名称:</string>
    <string name="dfu_file_size_label">文件大小:</string>
    <string name="dfu_file_size_text">%d bytes</string>
    <string name="dfu_file_status_error">读取文件错误</string>
    <string name="dfu_file_status_invalid">未知文件</string>
    <string name="dfu_file_status_invalid_message">请选择正确的升级文件</string>
    <string name="dfu_file_status_label">文件状态:</string>
    <string name="dfu_file_status_no_file">文件加载失败</string>
    <string name="dfu_file_status_ok">Ok</string>
    <string name="dfu_service_title">DFU Proxy</string>
    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_about">About DFU</string>
    <string name="dfu_settings_dfu_about_summary">"DFU documentation on Nordic's Developer Zone"</string>
    <string name="dfu_settings_dfu_assume_dfu_mode">External MCU DFU</string>
    <string name="dfu_settings_dfu_assume_dfu_mode_info">Check this switch to ON if you want to perform a DFU operation without jumping to the bootloader mode on a device with a DFU implementation from SDK 6.1 or older. To achieve the same result on any newer implementation the DFU Version characteristic should return value other than 0x0100.</string>
    <string name="dfu_settings_dfu_keep_bond">Keep bond information</string>
    <string name="dfu_settings_dfu_mbr_size">MBR size</string>
    <string name="dfu_settings_dfu_mbr_size_title">MBR size (by default 4096 bytes)</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_title">DFU Settings</string>
    <string name="dfu_status_aborted">升级已停止</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">升级停止中...</string>
    <string name="dfu_status_completed">升级完成</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">连接中...</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">正在断开连接...</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">\"升级失败: \"</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">升级中...</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">开始升级中...</string>
    <string name="dfu_status_starting">升级开始...</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">升级中...</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">正在升级中...</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">文件上传进度:%d/%d</string>
    <string name="dfu_status_validating">升级校验中...</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_success">已升级成功</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_upload_dialog_cancel_message">确定取消升级?</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="dfu_uploading_percentage_label">0%</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firmware_version">固件版本:%s</string>
    <string name="heart_rate">Heart Rate:%d bpm</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label">Label</string>
    <string name="loading">Loading…</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.</string>
    <string name="location_permission_title">Location permission required</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
</resources>