<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/toolbar_actionbar" layout="@layout/layout_toolbar" />
    <androidx.appcompat.widget.AppCompatButton android:layout_gravity="center_horizontal" android:id="@id/action_select_file" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="Select File" android:onClick="onSelectFileClicked" android:textAllCaps="false" />
    <TableLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dfu_file_name_label" />
            <androidx.appcompat.widget.AppCompatTextView android:ellipsize="middle" android:id="@id/file_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:freezesText="true" android:layout_weight="1.0" android:layout_marginStart="5.0dip" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dfu_file_size_label" />
            <androidx.appcompat.widget.AppCompatTextView android:id="@id/file_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:freezesText="true" android:layout_marginStart="5.0dip" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dfu_file_status_label" />
            <androidx.appcompat.widget.AppCompatTextView android:id="@id/file_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:freezesText="true" android:layout_marginStart="5.0dip" />
        </TableRow>
    </TableLayout>
    <androidx.appcompat.widget.AppCompatButton android:enabled="false" android:layout_gravity="center_horizontal" android:id="@id/action_upload" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dfu_action_upload" android:onClick="onUploadClicked" />
    <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="center_horizontal" android:id="@id/action_uploading" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/dfu_status_uploading" android:freezesText="true" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="18.0sp" android:layout_gravity="center_horizontal" android:id="@id/action_progress" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/dfu_uploading_percentage_label" android:freezesText="true" />
</LinearLayout>
